@@ -1,5 +1,10 @@
 2012-03-01  Kaz Kylheku  <kaz@kylheku.com>
 
+	* match.c (v_load): Fixed broken functionality. Failing to evaluate
+	directives following the load and consume input properly.
+
+2012-03-01  Kaz Kylheku  <kaz@kylheku.com>
+
 	Fixing two instances of unintentional O(n*n) behavior and poor memory use
 	that occur in horizontal matching of basic text patterns.
 
